bpo-39590: make deque.__contains__ and deque.count hold strong references (GH-18421)